--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Document</title>
 </head>
 <body>
+<div>
+    <p>Дополнить свою программу по видео<br><br></p>
+
+1) Написать проверку, что пользователь может:<br>
+
+·        Ввести в дополнительных доходах (chooseIncome) только строку<br>
+
+·        Не может оставить строку пустой<br>
+
+·        Не может отменить вопрос<br><br>
+
+2) При помощи метода перебора массива(forEach) вывести на экран сообщение "Способы доп. заработка: " и полученные способы (внутри chooseIncome)<br>
+
+·        Товары должны начинаться с 1, а не с 0. Выполняем этот пункт в chooseIncome.<br>
+
+3) Используя цикл for in для объекта (appData) вывести в консоль сообщение "Наша программа включает в себя данные: " (вывести весь appData)<br><br>
+
+4) Проверить, чтобы все работало и не было ошибок в консоли<br><br>
+
+5) Добавить папку с уроком на свой GitHub<br><br>
+
+
+Как перебрать свойства объекта?
+</div>
 	<script type="text/javascript" src="script.js"></script>
+<!--	<script type="text/javascript" src=""></script>-->
 </body>
 </html>
